--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,6 +3,9 @@
   display: inline-block;
   width: 20%;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
+  background-color: #f9f9f9;
+  min-width: 160px;
+  padding: 12px 16px;
 }
 
 .dropdown:hover {
