--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,7 +1,6 @@
 .dropdown {
   position: relative;
   display: inline-block;
-  width: 20%;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   background-color: #f9f9f9;
   min-width: 160px;
@@ -25,6 +24,9 @@
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.dropdown:hover .dropdown-content {
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
   transition: 0.3s;
 }
