--- a/CSS/index.css
+++ b/CSS/index.css
@@ -17,6 +17,7 @@
   position: absolute;
   background-color: #f9f9f9;
   padding: 12px 16px;
+  min-width: 160px;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -28,5 +29,6 @@
 .dropdown:hover .dropdown-content {
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
   transition: 0.3s;
+  min-width: 160px;
 }
 
