--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,6 +1,9 @@
 .dropdown {
   position: relative;
   display: inline-block;
+}
+
+.dropdown span {
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   background-color: #f9f9f9;
   min-width: 160px;
