--- a/CSS/index.css
+++ b/CSS/index.css
@@ -10,7 +10,7 @@
   padding: 12px 0px;
 }
 
-.dropdown:hover {
+.dropdown:hover span {
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
   transition: 0.3s;
 }
