--- a/CSS/index.css
+++ b/CSS/index.css
@@ -34,7 +34,7 @@
   min-width: 130px;
 }
 
-.dropdown:hover .dropdown-content ul{
+.dropdown-content ul{
   display: block;
   list-style-type: none;
 }
