--- a/CSS/index.css
+++ b/CSS/index.css
@@ -40,5 +40,7 @@
   list-style-type: none;
 }
 .dropdown-content li{
-    text-align: center;
+  text-align: center;
+  padding-top: 12px
+  padding-bottom: 12px;
 }
