--- a/CSS/index.css
+++ b/CSS/index.css
@@ -31,12 +31,14 @@
 }
 
 .dropdown:hover .dropdown-content {
+  text-align: center;
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
   transition: 0.3s;
   min-width: 130px;
 }
 
 .dropdown-content ul{
+  text-align: center;
   display: block;
   list-style-type: none;
 }
