--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,6 +1,7 @@
 .dropdown {
   position: relative;
   display: inline-block;
+  max-width: 160px;
 }
 
 .dropdown span {
@@ -34,7 +35,7 @@
   text-align: center;
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
   transition: 0.3s;
-  min-width: 130px;
+  width: 100%;
 }
 
 .dropdown-content ul{
@@ -44,7 +45,7 @@
 }
 
 .dropdown-content li{
-  text-align: center;
+  align: center;
   padding-top: 12px;
   padding-bottom: 12px;
 }
