--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -32,14 +32,14 @@
 }
 
 .dropdown:hover .dropdown-content {
-  text-align: center;
+  align: center;
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 100%;
 }
 
 .dropdown-content ul{
-  text-align: center;
+  align: center;
   display: block;
   list-style-type: none;
 }
@@ -51,5 +51,5 @@
 }
 
 .dropdown-content li a{
-  text-align: center;
+  align: center;
 }
