--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -2,11 +2,13 @@
   position: relative;
   display: inline-block;
   max-width: 160px;
+  border-style: solid;
+  border-width: medium;
 }
 
 .dropdown span {
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
-  background-color: #f9f9f9;
+  background-color: seagreen;
   min-width: 160px;
   padding: 12px 16px;
   z-index: 3;
