--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -12,6 +12,8 @@
   min-width: 160px;
   padding: 12px 16px;
   z-index: 3;
+  border-top-style: solid;
+  border-width: medium;
 }
 
 .dropdown:hover span {
