--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -10,7 +10,7 @@
   text-align: center;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   background-color: seagreen;
-  min-width: 160px;
+  width: 100%;
   z-index: 3;
   border-top-style: solid;
   border-width: medium;
