--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -7,7 +7,7 @@
 }
 
 .dropdown span {
-  text-align: center;
+  align: center;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   background-color: seagreen;
   width: 100%;
