--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -1,7 +1,7 @@
 .dropdown {
   position: relative;
   display: inline-block;
-  width: 160px;
+  min-width: 10%;
   border-style: solid;
   border-width: medium;
 }
