--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -28,7 +28,7 @@
 
 .dropdown-content {
   display: none;
-  min-width: 160px;
+  width: 100%;
   background-color: seagreen;
   padding: 0px 0px;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
