--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -1,13 +1,14 @@
 .dropdown {
   position: relative;
   display: block;
-  min-width: 10%;
+  width: 10%;
   border-style: solid;
   border-width: medium;
 }
 
 .dropdown span {
   align: center;
+  width:100%;
   /*box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);*/
   background-color: seagreen;
   border-top-style: solid;
