--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -7,13 +7,10 @@
 }
 
 .dropdown span {
-  align: center;
+  text-align: center;
   width:100%;
   /*box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);*/
   background-color: seagreen;
-  border-top-style: solid;
-  border-width: medium;
-  padding-top: 12px;
   padding-bottom: 12px;
 }
 
