--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -6,6 +6,7 @@
   padding-bottom: 12px;
   border-style: solid;
   border-width: medium;
+  box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
 }
 
 .dropdown span {
@@ -41,6 +42,11 @@
   width: 100%;
 }
 
+
+.dropdown:hover {
+  box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
 .dropdown-content ul{
   align: center;
   display: block;
