--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -10,16 +10,9 @@
 }
 
 .dropdown span {
-  text-align: center;
+  margin: auto;
   width:100%;
-  /*box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);*/
   background-color: seagreen;
-  padding-bottom: 12px;
-}
-
-.dropdown:hover span {
-  box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
-  transition: 0.3s;
 }
 
 .dropdown-content {
