--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -16,7 +16,6 @@
 
 .dropdown-content {
   display: none;
-  width: 100%;
   background-color: seagreen;
   padding: 0px 0px;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
@@ -28,7 +27,7 @@
 }
 
 .dropdown:hover .dropdown-content {
-  align: center;
+  margin: auto;
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 100%;
@@ -40,17 +39,17 @@
   transition: 0.3s;
 }
 .dropdown-content ul{
-  align: center;
+  margin: auto;
   display: block;
   list-style-type: none;
 }
 
 .dropdown-content li{
-  align: center;
+  margin: auto;
   padding-top: 12px;
   padding-bottom: 12px;
 }
 
 .dropdown-content li a{
-  align: center;
+  margin: auto;
 }
