--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -17,18 +17,11 @@
 .dropdown-content {
   display: none;
   background-color: seagreen;
-  padding: 0px 0px;
-  box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
-  text-align: center;
-}
-
-.dropdown:hover .dropdown-content {
   margin: auto;
-  box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 100%;
 }
@@ -37,6 +30,7 @@
 .dropdown:hover {
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
   transition: 0.3s;
+  margin:auto;
 }
 .dropdown-content ul{
   margin: auto;
