--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -34,14 +34,16 @@
 
 .dropdown-content ul{
   margin: auto;
-  display: block;
+  text-align: center;
   list-style-type: none;
 }
 .dropdown-content li{
   margin: auto;
+  text-align: center;
   padding-top: 12px;
   padding-bottom: 12px;
 }
 .dropdown-content li a{
   margin: auto;
+  text-align: center;
 }
