--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -8,10 +8,13 @@
   border-style: solid;
   border-width: medium;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
+  overflow: hidden;
+  height: 100%;
 }
 .dropdown:hover {
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
   transition: 0.3s;
+  height: 100%;
 }
 
 
@@ -39,4 +42,8 @@
 .dropdown-content li{
   padding-top: 12px;
   padding-bottom: 12px;
+}
+
+.dropdown-content li:last-child{
+  padding-bottom:0px;
 }
