--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -9,11 +9,11 @@
   border-width: medium;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   overflow: hidden;
-  height: 100%;
+  height: calc(100% - 1px);
 }
 .dropdown:hover {
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
-  height: 100%;
+  height: calc(100% - 1px);
   transition: 0.3s;
 }
 
