--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -9,7 +9,7 @@
   border-width: medium;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   overflow: hidden;
-  height: calc(100% - 1px);
+  height: 40px;
 }
 .dropdown:hover {
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
