--- a/CSS/pricing.css
+++ b/CSS/pricing.css
@@ -1,5 +1,6 @@
 h1 {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
+  padding: 0;
+  color: chocolate;
+  font-family: cursive;
 }
