--- a/CSS/pricing.css
+++ b/CSS/pricing.css
@@ -2,5 +2,5 @@ h1 {
   text-align: center;
   padding: 0;
   color: chocolate;
-  font-family: cursive;
+  font-family: Apple Chancery, cursive;	
 }
