--- a/CSS/pricing.css
+++ b/CSS/pricing.css
@@ -3,6 +3,7 @@
 h1 {
   text-align: center;
   padding: 0;
-  color: chocolate;
+  color: palegreen;
   font-family: "OCR A Std";
 }
+body {background-color: seagreen;}
