--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -19,7 +19,7 @@
 
 .dropdown-content {
   display: none;
-  background-color: #f9f9f9;
+  background-color: seagreen;
   padding: 0px 0px;
   min-width: 130px;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
