Updated index.css and pricing.html

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -11,7 +11,7 @@ p {
   font-family: "OCR A Std";
 }
 body {background-color: seagreen;}
-h3.serif {
+h3 {
   color: palegreen;
   font-family: "OCR A Std";
 }
