--- a/CSS/index.css
+++ b/CSS/index.css
@@ -14,6 +14,17 @@ p {
   font-family: "OCR A Std";
 }
 
+p.asterisk {
+    color: orangered;
+    font-family: "OCR A Std";
+}
+
+p.bottomPage {
+    color: orangered; /* See below comment */
+    text-align: left; /* Create new class and change as necessary. */
+    vertical-align: text-bottom;
+}
+
 div.slide-left {
   width:100%;
   overflow:hidden;
