--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -9,11 +9,9 @@
   border-width: medium;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   overflow: hidden;
-  height: 40px;
 }
 .dropdown:hover {
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
-  height: calc(100% - 1px);
   transition: 0.3s;
 }
 
@@ -27,10 +25,12 @@
 
 
 .dropdown-content {
+  transform: scaleY(0);
   display: none;
   background-color: seagreen;
 }
 .dropdown:hover .dropdown-content {
+  transform: scaleY(1);
   display: block;
 }
 
