--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -9,9 +9,13 @@
   border-width: medium;
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   overflow: hidden;
+  
+  min-height: 20px;
+  height:0%;
 }
 .dropdown:hover {
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
+  height:100%;
   transition: 0.3s;
 }
 
@@ -25,13 +29,8 @@
 
 
 .dropdown-content {
-  transform: scaleY(0);
   display: block;
   background-color: seagreen;
-}
-.dropdown:hover .dropdown-content {
-  transform: scaleY(1);
-  transition: 0.3s;
 }
 
 
