--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -11,12 +11,12 @@
   overflow: hidden;
   
   min-height: 20px;
-  height:0%;
+  height:10%;
+  transition: height .3s ease;
 }
 .dropdown:hover {
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
-  height:100%;
-  transition: 0.3s;
+  height:100% !important;
 }
 
 
