--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -10,8 +10,7 @@
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2);
   overflow: hidden;
   
-  min-height: 20px;
-  height:10%;
+  height: 20px;
   transition: height .3s ease;
 }
 .dropdown:hover {
