--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -15,7 +15,8 @@
 }
 .dropdown:hover {
   box-shadow: 4px 8px 8px 0px rgba(0,0,0,0.2);
-  height:100% !important;
+  
+  /*height:100% !important;*/
 }
 
 
